--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -13,8 +13,7 @@
     position: fixed !important;
     top: 50%;
     left: 50%;
-    transform:translateX(-50%) ;
-    
+    transform:translateX(-50%);  
 }
 
 .statusText{
@@ -83,7 +82,8 @@
     text-align: center;
 }
 
-.allFields, .shortAllFields {
+.allFields, 
+.shortAllFields{
     width: calc(55% - 30px);
     height: auto;
     display: flex;
@@ -100,7 +100,7 @@
 .avatarWrapperUserFields:hover,
 .allFields:hover,
 .shortAllFields:hover,
-.shortAvatarWrapperUserFields:hover {
+.shortAvatarWrapperUserFields:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -150,20 +150,21 @@
     text-align: center;
 }
 
-.line {
+.line{
     background: #3C5438;
     width: 100%;
     height: 10px;
     margin-bottom: 5px;
 }
-@media(max-width: 1330px) {
-    .wrapperContainer, .shortAvatarWrapperUserFields {
+@media(max-width: 1330px){
+    .wrapperContainer,
+    .shortAvatarWrapperUserFields{
         width: 750px !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields {
+    .avatarWrapperUserFields{
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -196,13 +197,14 @@
     }
  }
  @media(max-width: 1120px) {
-    .wrapperContainer, .shortAvatarWrapperUserFields {
+    .wrapperContainer,
+    .shortAvatarWrapperUserFields{
         width: 600px !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields, {
+    .avatarWrapperUserFields{
         width: 100% !important;
         padding-top: 20px;
         padding-bottom: 20px;
@@ -231,13 +233,14 @@
     }
  }
 @media(max-width: 768px) {
-    .wrapperContainer, .shortAvatarWrapperUserFields {
+    .wrapperContainer,
+    .shortAvatarWrapperUserFields{
         width: 100% !important;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 20px;
     }
-    .avatarWrapperUserFields {
+    .avatarWrapperUserFields{
        width: 100% !important;
        padding-top: 20px;
        padding-bottom: 20px;
@@ -300,7 +303,7 @@
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
-.buttonWrapper {
+.buttonWrapper{
     text-align: center;
 }
 
@@ -330,25 +333,24 @@
 
 .edustaffWrapper{
     display: inline;
-   
 }
 
 .distinctions{
     width: fit-content;
     margin: auto;
     padding: 2px;
+    word-break: break-word;
 }
 
 .edustaffPhoto{
     display: inline;
-   max-width: 100px;
+    max-width: 100px;
     max-height: 40px;
 }
 
 @media(max-width: 420px){
     .edustaffPhoto{
-    display: inline-flexbox;
-    
+        display: inline-flexbox;
     }
 }
 
@@ -360,9 +362,8 @@
 
 @media(max-width:320px){
     .edustaffPhotoResponsive{
-    max-width: 50px;
-    max-height: 20px;
-
+        max-width: 50px;
+        max-height: 20px;
     }
 }
 
@@ -382,12 +383,12 @@
     transform: scale(1.3);
 }
 
-.LinkText {
+.LinkText{
     text-align: center;
     font-size: 20px;
     font-weight: 400;
 }
   
-.LinkText:hover {
+.LinkText:hover{
     text-decoration: underline;
-  }
+}
