Fixed [Documents] Alignment issue on a Country Documents tab #1240 and heigth in city/club/region followers,members,admins cards

--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -217,7 +217,7 @@ h4.ant-typography {
         
         .detailsMeta {
             margin-top: 10px;
-            
+            height: 45px;
             .ant-card-meta-title {
                 white-space: normal;
                 display: -webkit-box;
