--- a/src/pages/GoverningBody/GoverningBody/GoverningBody.less
+++ b/src/pages/GoverningBody/GoverningBody/GoverningBody.less
@@ -174,9 +174,9 @@ h4.ant-typography {
         width: 242px;
         text-align: center;
 
-        
         .detailsMeta {
             margin-top: 10px;
+            height: 45px;
             
             .ant-card-meta-title {
                 white-space: normal;
