--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -5,8 +5,6 @@ h4.ant-typography {
     color: #3c5438;
 }
 
-
-
 .link{
     color: blue;
 }
@@ -215,6 +213,8 @@ h4.ant-typography {
         
         .detailsMeta {
             margin-top: 10px;
+            word-break: break-all;
+            height: 45px;
             
             .ant-card-meta-title {
                 white-space: normal;
