--- a/src/pages/GoverningBody/Announcement/Announcement.module.css
+++ b/src/pages/GoverningBody/Announcement/Announcement.module.css
@@ -11,9 +11,10 @@
 }
 
 .listItem {
-  border: 5px;
-  color: #000;
-  background-color: #000;
+  display: block;
+  outline: 2px solid rgb(211, 208, 208);
+  padding-left: 28px;
+  margin-top: 10px;
 }
 
 .menu {
