--- a/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
+++ b/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
@@ -2,27 +2,6 @@
     background-color: rgb(238, 238, 238);
 }
 
-.actionsWrapper {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 90%;
-    margin: 0 auto;
-}
-
-.card {
-    background-color: #fff;
-    margin-top: 40px;
-    width: 600px;
-    height: auto;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
 form {
     width: 100%;
 }
@@ -40,12 +19,6 @@ form {
     margin-right: 20px;
 }
 
-.row {
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 45px;
-}
-
 .select:hover,
 .select:focus,
 input:hover,
@@ -56,42 +29,34 @@ input:hover,
 
 .input {
     text-align: start;
-
     padding: 5px 11px;
     font-size: 17px;
     width: 100% !important;
     
 }
-.formItem{
+.formItem {
     display: block;
     width: 100% !important;
 }
 
 .select {
-    width: 245px !important;
-    text-align: start;
+    min-width: 370px;
+    max-width: 370px;
+    position: relative;
 }
 
-input,
-[role="spinbutton"] {
-    text-align: left;
-}
-
-[role="spinbutton"] {
-    margin-left: -20px;
-}
 .button {
-    margin: 10px 20px;
+    margin: 10px 0px 25px 7px;
     border: none;
     width: auto;
     height: 40px;
     outline: none;
-    text-align: center;
     cursor: pointer;
     margin-bottom: 15px;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     display: inline-table;
+    float: right;
 }
 
 .button:hover {
@@ -108,33 +73,7 @@ input,
     display: block;
 }
 
-.title {
-    justify-content: center;
-    display: flex;
-}
-
 @media(max-width:767px) {
-    .actionsWrapper {
-        margin: 0;
-        width: 100%;
-    }
-    .card {
-        margin: 0;
-        width: 100%;
-    }
-    .title {
-        text-align: center;
-        padding: 10px 0;
-    }
-    .title h2 {
-        font-size: 20px;
-    }
-    .row {
-        width: 100%;
-        flex-direction: column;
-        margin: 0;
-        padding: 0 15px
-    }
     .input {
         width: 100% !important;
     }
