Fixed several bugs (#1727,#1726,#1723, ...)

--- a/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
+++ b/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
@@ -55,4 +55,10 @@
 .title{
    width: 300;
    overflow: hidden;
+   word-break: break-all;
+}
+
+.description{
+    overflow: hidden;
+    word-break: break-all; 
 }
