--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -148,6 +148,7 @@
     background-color: rgba(210, 210, 210, 0.5);
     display: block;
     text-align: center;
+    text-overflow: ellipsis;
 }
 
 .line{
