--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -181,6 +181,9 @@
         padding-top: 10px;
         padding-bottom: 10px;
         margin: auto !important;
+        label{
+            padding-left: 10px;
+        }
     }
     .formItem,
     .shortFormItem{
