Fix for missing symbol I in report information word Un/Confirmed

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportInformation/AnnualReportInformation.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportInformation/AnnualReportInformation.less
@@ -1,28 +1,28 @@
 .annualreport-modal {
-  .textCenter {
-    text-align: center;
-  }
+    .textCenter {
+        text-align: center;
+    }
 
-  .container {
-    width: 100%;
-  }
+    .container {
+        width: 100%;
+    }
 }
 
 .status-stamp {
-  margin-right: -5px;
-  margin-top: -20px;
-  user-select: none;
-  float: right;
-  box-shadow: 0 0 0 3px, 0 0 0 2px inset;
-  border: 2px solid transparent;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 5px 2px;
-  line-height: 22px;
-  font-size: 24px;
-  font-family: "Black Ops One", cursive;
-  text-transform: uppercase;
-  text-align: center;
-  opacity: 0.4;
-  transform: rotate(9deg);
+    margin-right: -5px;
+    margin-top: -20px;
+    user-select: none;
+    float: right;
+    box-shadow: 0 0 0 3px, 0 0 0 2px inset;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 5px 2px;
+    line-height: 22px;
+    font-size: 24px;
+    font-family: "Black Ops One", cursive, system-ui;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0.4;
+    transform: rotate(9deg);
 }
