--- a/src/pages/ResetPassword/ResetPassword.module.css
+++ b/src/pages/ResetPassword/ResetPassword.module.css
@@ -51,7 +51,8 @@
     width:100%;
     height:40px;
     margin-bottom: 20px;
-    text-align: center;    
+    text-align: center; 
+    padding-top: 7px;   
 }
 
 @media(max-width: 700px){
@@ -81,9 +82,12 @@
     }
 }
 
-@media(max-width: 410px){
+@media(max-width: 412px){
     .mainContainerReset{
         width: 350px;
+    }
+    .resetPasswordContainer{
+        padding-top: 0px;  
     }
 }
 
