--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -280,10 +280,11 @@
 
 @media(max-width: 450px){
     .img{
-        width: 220px;
-        height: 220px;       
+        max-width: 180px;
+        max-height: 180px;
     }
 }
+
 
 .content{
     margin-top: 20px;
