--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -111,13 +111,18 @@
     .wrapperCol,
     .wrapperGeneralInfo {
         width: 100%;
-        margin: 0;
-    }
-    .wrapperGeneralInfo {
         margin: 10px 0;
-    }  
+    }
     .buttonChange {
         width: 170px !important;
+    }
+}
+
+@media (max-width: 480px) { 
+    .wrapperGeneralInfo span{
+        width: 170px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
