added media query to fix bug with title overflow

--- a/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
+++ b/src/pages/AnnualReport/RegionAnnualReportForm/RegionAnnualReportForm.less
@@ -61,6 +61,13 @@
         transparent 80%
     );
 }
+
 .ant-form-item-label > label {
     height: 100%;
+}
+
+@media (max-width: 400px) {
+    .regionAnnualReportFormTitle {
+        font-size: 8vw !important;
+    }
 }
