fixed overgflow bugs

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportInformation/AnnualReportInformation.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportInformation/AnnualReportInformation.less
@@ -25,4 +25,7 @@
     text-align: center;
     opacity: 0.4;
     transform: rotate(9deg);
+    @media (max-width: 400px) {
+        font-size: 6vw;
+    }
 }
