--- a/src/pages/UserTable/UserTable.module.css
+++ b/src/pages/UserTable/UserTable.module.css
@@ -27,6 +27,13 @@
   width: 100%;
 }
 
+.customFilterDropdown {
+  padding: 8px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+}
+
 @media (max-width: 765px){
   .table{
     overflow-x: scroll;
