--- a/src/pages/AnnualReport/ClubAnnualReportCreate/ClubAnnualReportCreate.less
+++ b/src/pages/AnnualReport/ClubAnnualReportCreate/ClubAnnualReportCreate.less
@@ -1,26 +1,26 @@
 .annualreport-form {
     background-color: #ffffff;
-    border: 2px solid #3C5438;
+    border: 2px solid #3c5438;
     border-radius: 15px;
     box-shadow: 0px 4px 4px rgba(3, 80, 0, 0.65);
     padding: 1%;
 }
 
 .annualreport-modal {
-  .textCenter {
-      text-align: center;
-  }
-  
-  .container {
-      width: 100%;
-  }
+    .textCenter {
+        text-align: center;
+    }
+
+    .container {
+        width: 100%;
+    }
 }
 
 .clubButtons {
     text-align: center;
 
     .ant-btn-primary {
-      width: 65%;
-      margin: 5px;
+        width: 65%;
+        margin: 5px;
     }
 }
