changed club annual report form description + made it responsive

--- a/src/pages/AnnualReport/ClubAnnualReportForm/ClubAnnualReportForm.less
+++ b/src/pages/AnnualReport/ClubAnnualReportForm/ClubAnnualReportForm.less
@@ -1,3 +1,9 @@
 .clubAnnualReportResponsiveCols {
     align-self: flex-end;
 }
+
+.clubAnnualReportFormDescription {
+    align-items: flex-start;
+    width: 100%;
+    word-break: break-all;
+}
