fix for annual reports table

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -5,6 +5,10 @@
     width: 890px;
     margin-left: auto;
 }
+
+.AnnualReportTableButtonsSearchField {
+    justify-content: right;
+}
 .searchContainer > input {
     max-width: 300px;
     margin-left: auto;
