removed inline style

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -9,6 +9,11 @@
 .AnnualReportTableButtonsSearchField {
     justify-content: right;
 }
+
+.AnnualReportTableTabs {
+    width: 100%;
+}
+
 .searchContainer > input {
     max-width: 300px;
     margin-left: auto;
