--- a/src/pages/Precaution/PrecautionTable/Table.module.css
+++ b/src/pages/Precaution/PrecautionTable/Table.module.css
@@ -1,50 +1,55 @@
-.titleTable{
+.titleTable {
     text-align: center;
     margin-bottom: 15px;
-  }
+}
 
-  /* Search container */
-  .searchContainer{
+/* Search container */
+.searchContainer {
     display: flex;
+    justify-content: right;
     align-items: baseline;
     margin-bottom: 12px;
     width: 430px;
-    margin-left: auto; 
-  }
-  .searchContainer>input{
+    margin-left: auto;
+}
+.searchContainer > input {
     max-width: 300px;
-    margin-left: auto; 
-  }
+    margin-left: auto;
+}
 
-  .cardButton{
+.PrecautionSearchField {
+    width: auto;
+}
+
+.cardButton {
     inline-size: -webkit-fill-available;
     margin-top: 7px;
-    color:#3c5438;
+    color: #3c5438;
     border-color: #3c5438;
-  }
-  .searchContainer>* {
+}
+.searchContainer > * {
     margin-left: 12px;
-  }
-  
-  /* Context menu right click */
-  @media(max-width: 800px){
-    .searchContainer{
-      width: 100%;
-      flex-direction: column;
-    }
-    .searchContainer>*{
-      width: 100%;
-      margin-bottom: 5px;
-      margin-left: auto; 
-    }
-  }
+}
 
-  .menu{
+/* Context menu right click */
+@media (max-width: 800px) {
+    .searchContainer {
+        width: 100%;
+        flex-direction: column;
+    }
+    .searchContainer > * {
+        width: 100%;
+        margin-bottom: 5px;
+        margin-left: auto;
+    }
+}
+
+.menu {
     box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
     position: absolute;
-  }
-  .submitButtons{
-    width:100%;
-    display:flex;
-     justify-content:space-between
-  }
+}
+.submitButtons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
