fix for annual reports table

--- a/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
+++ b/src/pages/AnnualReport/AnnualReportTable/AnnualReportTable.less
@@ -8,8 +8,10 @@
 
 .AnnualReportTableButtonsSearchField {
     justify-content: right;
+    @media (max-width: 720px) {
+        justify-content: center;
+    }
 }
-
 .AnnualReportTableTabs {
     width: 100%;
 }
