--- a/src/pages/Distinction/DistinctionTable/Table.module.css
+++ b/src/pages/Distinction/DistinctionTable/Table.module.css
@@ -31,6 +31,10 @@
     margin-left: 12px;
 }
 
+.buttonsSearchField {
+    justify-content: right;
+}
+
 /* Context menu right click */
 @media (max-width: 800px) {
     .searchContainer {
@@ -41,6 +45,12 @@
         width: 100%;
         margin-bottom: 5px;
         margin-left: auto;
+    }
+}
+
+@media (max-width: 720px) {
+    .buttonsSearchField {
+        justify-content: center;
     }
 }
 
