Fix document/decision icon display on hover

--- a/src/pages/Club/Club/Club.less
+++ b/src/pages/Club/Club/Club.less
@@ -132,7 +132,7 @@ h4.ant-typography {
             }
 
             .clubDocumentItem {
-                cursor: pointer;
+                cursor: default;
 
                 .documentIcon {
                     font-size: 60px;
