--- a/src/pages/GoverningBody/GoverningBody/GoverningBody.less
+++ b/src/pages/GoverningBody/GoverningBody/GoverningBody.less
@@ -132,8 +132,7 @@ h4.ant-typography {
             }
 
             .governingBodyDocumentItem {
-                cursor: pointer;
-
+                cursor: default;
 
                 .documentIcon {
                     font-size: 60px;
