--- a/src/pages/AnnualReport/ClubAnnualReportForm/ClubAnnualReportForm.less
+++ b/src/pages/AnnualReport/ClubAnnualReportForm/ClubAnnualReportForm.less
@@ -3,7 +3,16 @@
 }
 
 .clubAnnualReportFormDescription {
-    align-items: flex-start;
     width: 100%;
     word-break: break-all;
+}
+
+.ClubAnnualReportFormDescriptionDate {
+    justify-content: right;
+}
+
+@media (max-width: 780px) {
+    .ClubAnnualReportFormDescriptionDate {
+        justify-content: left;
+    }
 }
