Fix document/decision icon display on hover (#687)

--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -144,7 +144,7 @@ h4.ant-typography {
             }
 
             .cityDocumentItem {
-                cursor: pointer;
+                cursor: default;
 
                 .documentIcon {
                     font-size: 60px;
