--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -124,6 +124,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
+    .textFieldsMain span{
+        width: auto;
+    }
 }
 
 .textList {
