--- a/src/pages/UserTable/UserTable.module.css
+++ b/src/pages/UserTable/UserTable.module.css
@@ -27,13 +27,6 @@
   width: 100%;
 }
 
-.customFilterDropdown {
-  padding: 8px;
-  border-radius: 6px;
-  background: #fff;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
-}
-
 @media (max-width: 765px){
   .table{
     overflow-x: scroll;
@@ -81,4 +74,23 @@
 .parentDiv {  
   display: flex;
   align-items: center; 
+}
+
+.customFilterDropdown {
+  padding: 0.5em;
+  border: 0.1em solid #3D5438;
+  border-radius: 0.35em;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .2);
+}
+
+.filterElement {
+  margin-top: 0.2em;
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+}
+
+.filterButton {
+  width: 50%;
+  margin-top: 0.7em;
+  margin-bottom: 0.2em;
 }
