[Profile] The elements go beyond when narrow the page #1884

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -105,6 +105,7 @@
     .headerContainer {
         color: white !important;
         padding: 0 15px;
+        min-width: 300px;
     }
     .headerMenu {
         color: white !important;
