--- a/src/pages/AboutBase/AboutBase.less
+++ b/src/pages/AboutBase/AboutBase.less
@@ -40,6 +40,13 @@
     margin: auto;
 }
 
+.addSubSection{
+  width: 112px;
+  margin-left:auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
 .editInfoIcon{
   margin-right: auto;
   font-size: 18px;
