Fixed approvers cards style

--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -36,12 +36,12 @@
 .approversCard {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .cardStyles {
   margin: 15px;
   width: 177px;
+  height: calc(100% - 30px);
   background: transparent;
 }
 
