Fixed card height in Annual report

--- a/src/pages/AnnualReport/AnnualReportTable/ClubAnnualReportInformation/ClubAnnualReportInformation.less
+++ b/src/pages/AnnualReport/AnnualReportTable/ClubAnnualReportInformation/ClubAnnualReportInformation.less
@@ -8,6 +8,23 @@
     }
 }
 
+.card__wrap--outer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.card__wrap--inner {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.flexible {
+    flex-grow: 1;
+}
+
 .linkText {
     font-size: 14px;
 }
