Fix double click highlighted fielgs on Sign in page

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .footerContainer{
     text-align: center;
     padding: 10px 0px 10px;
+    user-select: none;
 }
 .footerContacts{
     display: flex;
