Fix buttons Sign In and Sign Up for mobile devices and fix buttons Google and Facebook for small screen

--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -196,6 +196,15 @@ input[type='password']{
     }
     .forgot{
         font-size: 14px;
-        margin-left:80px;
+        margin-left:80px;   
+    }
+    .forgot{
+        margin-left: 50px;
+    }
+    #googleBtn{
+        margin-right: 0px;
+    }
+    .socialButton{
+        margin-left: -15px;
     }
 }
