--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -201,6 +201,9 @@ input[type='password']{
     .forgot{
         margin-left: 50px;
     }
+    #googleBtn{
+        margin-right: 0px;
+    }
     .socialButton{
         margin-left: -15px;
     }
