--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
@@ -11,30 +11,40 @@
   @media (max-width: 280px) {
     width: 200px;
   }
-  width: 275px;
-  font-size: 17px;
+  width: 195px;
+  font-size: 14px;
   text-align: center;
   overflow: hidden;
 }
 
 .descriptions{
-  padding: 10px 20px 10px 70px;
+  padding: 5px 7px 5px 7px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: block;
+    text-align: center;
+   // text-overflow: ellipsis;
+   
+ // margin-left: -82px;
+ // margin-right: 87px;
+ 
 }
 
 .descriptions:hover{
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
+.descriptions{
+  @media (max-width: 768px)and (min-width: 541px) {
+   
+    margin-left: -82px;
+    margin-right: 87px;
+  }
+ 
+}
 .dataDescription {
   .generalLabel();
   @media (max-width: 280px) {
-    min-width: 200px;
+    width: 100%;
   }
   min-width: 275px;
   max-width: 420px;
@@ -43,6 +53,11 @@
   font-size: 14px;
   text-align: center;
   font-style: italic;
+  @media  (min-width: 1024px) {
+   
+   
+    height: 452px;
+  }
 }
 
 .eventLabel {
