--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -23,9 +23,16 @@
   align-items: center;
   justify-content: center;
 }
-
+.eventActions{
+  @media (max-width: 768px)and (min-width: 541px) {
+   
+   
+    margin-right: 5px;
+  }
+ 
+}
 .event-info-wrapper {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -35,9 +42,11 @@
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  flex-direction: column;
-  align-items: center;
+  display: flex;
+  text-align: center;
+align-items: center;
   justify-content: center;
+  
 }
 
 .participantsTable{
@@ -46,9 +55,9 @@
   padding: 20px 20px 20px 20px;
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: block;
+  text-align: center;
+  text-overflow: ellipsis;
 }
 
 .eventGallary:hover,
@@ -151,9 +160,14 @@ td {
     width: 100%;
     margin-bottom: 40px; 
   }
+  
   .eventGallary{
     width: 100%;
+    
+ // margin: 0px;
+//padding: 0px;
  }
+ 
  .participantsTable{
   width: 100%;
 }
