fixed pagination and loader for table kadra

--- a/src/pages/KadraVykhovnykiv/Table.module.css
+++ b/src/pages/KadraVykhovnykiv/Table.module.css
@@ -2,7 +2,9 @@
     text-align: center;
     margin-bottom: 15px;
 }
-
+.textCenter{
+    text-align:center !important;
+ }
 .searchContainer {
     display: flex;
     align-items: baseline;
@@ -77,3 +79,4 @@
         justify-content: center;
     }
 }
+ 
