Removed inline styles

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -23,6 +23,14 @@
   background-color: transparent;
 }
 
+#rowIcon{
+  font-size: 20px;
+}
+
+#label{
+  font-size: 15px;
+}
+
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   min-width: 600px;
