--- a/src/pages/Statistics/StatisticsRegions.less
+++ b/src/pages/Statistics/StatisticsRegions.less
@@ -51,6 +51,14 @@
   padding: 20px 20px 20px 20px;
 }
 
+#rowIcon{
+  font-size: 20px;
+}
+
+#label{
+  font-size: 15px;
+}
+
 @media (max-width: 920px) {
   .formGlobal {
     display: inline;
