--- a/src/pages/Distinction/DistinctionTable/Form.module.css
+++ b/src/pages/Distinction/DistinctionTable/Form.module.css
@@ -1,33 +1,46 @@
 .cardButton {
-    display: flex;
-    width: 100%;
-    justify-content:flex-end;
-    float: right;
+  display: flex;
+  width: 100%;
+  justify-content:flex-end;
+  float: right;
 }
 .cardButton>* {
-  margin-right: 8px;
+margin-right: 8px;
 } 
-  .formField {
-    max-width: 370px;
-    min-width: 370px;
-  }
-  
-  .selectField {
-    max-width: 370px;
-    min-width: 370px;
-  }
+.formField {
+  max-width: 370px;
+  min-width: 370px;
+}
+
+.selectField {
+  max-width: 370px;
+  min-width: 370px;
+}
+
+.selectTypeDistField {
+  max-width: 325px;
+  min-width: 325px;
+}
+
+.editTypeDistPosition{
+  padding: 35px 0 0 0;
+}
 
 @media(max-width: 400px) {
-  .formField{ 
-    max-width: 100%;
-    min-width: 100%;
-  }
-  .selectField {
-    max-width: 100%;
-    min-width: 100%;
-  }
+.formField{ 
+  max-width: 100%;
+  min-width: 100%;
+}
+.selectField {
+  max-width: 100%;
+  min-width: 100%;
+}
+.selectTypeDistField {
+  max-width: 100%;
+  min-width: 100%;
+}
 }
 .buttons{
-  margin-right: 0px !important;
-  margin-left: 7px;
+margin-right: 0px !important;
+margin-left: 7px;
 }
