--- a/src/pages/Distinction/DistinctionTable/Form.module.css
+++ b/src/pages/Distinction/DistinctionTable/Form.module.css
@@ -18,12 +18,12 @@ margin-right: 8px;
 }
 
 .selectTypeDistField {
-  max-width: 325px;
-  min-width: 325px;
+  max-width: 320px;
+  min-width: 320px;
 }
 
 .editTypeDistPosition{
-  padding: 35px 0 0 0;
+  padding: 35px 0 0 25%;  
 }
 
 @media(max-width: 400px) {
