--- a/src/pages/Actions/ActionEvent/EventInfo/ParticipantsTable.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/ParticipantsTable.less
@@ -21,6 +21,9 @@
     &:hover{
         background-color: #00C851 !important;
     }
+    // .disabled {
+    //     background-color: lightgrey !important;
+    // }
 }
 
 .underReviewButton{
@@ -28,6 +31,9 @@
     &:hover{
         background-color: #ffbb33 !important;
     }
+    // .disabled {
+    //     background-color: lightgrey !important;
+    // }
 }
 
 .banButton{
@@ -35,4 +41,11 @@
     &:hover{
         background-color: #ff4444 !important;
     }
+    // .disabled {
+    //     background-color: lightgrey !important;
+    // }
+}
+
+.disabledButton {
+    background-color: lightgrey !important;
 }
